# cmsis2rhai

./: .gitignore  Cargo.toml  default_sequences.xml
src/: generator.rs  main.rs
